<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="336dp"
        android:layout_marginLeft="336dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/setting"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@drawable/setting" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/principal_text"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:paddingBottom="0dp"
            android:text="@string/principal_amount"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/principal_description"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:text="@string/this_is_usually_the_purchase_price_minus_your_down_payment"
            android:textColor="@color/colorPrimaryLight"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/princi_layout"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/princi_symbol"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingRight="5dp"
                android:textAllCaps="false"
                android:textColor="@color/colorGrey"
                android:textSize="14sp"
                tools:text="US$" />

            <EditText
                android:id="@+id/principal"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorGrey"
                android:ems="10"
                android:inputType="number"
                android:padding="5dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/Interest_group_text"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_weight="1"
            android:text="@string/interest"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/interest_description"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:text="@string/interest_des"
            android:textColor="@color/colorPrimaryLight"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/interest_layout"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/interest_symbol"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingRight="5dp"
                android:text="%"
                android:textAllCaps="false"
                android:textColor="@color/colorGrey"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/Interest_group"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorGrey"
                android:ems="10"
                android:inputType="number"
                android:padding="5dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/amoritization_period_text"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_weight="1"
            android:text="@string/amoritization_period"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/amor_description"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:text="@string/amour_dec"
            android:textColor="@color/colorPrimaryLight"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/amor_layout"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/amor_symbol"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingRight="5dp"
                android:text="Yrs"
                android:textAllCaps="false"
                android:textColor="@color/colorGrey"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/amoritization_period"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorGrey"
                android:ems="10"
                android:inputType="number"
                android:padding="5dp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="130dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:width="200dp"
        android:background="@color/colorPrimaryLight"
        android:maxHeight="1dp"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_marginLeft="130dp" />

</android.support.constraint.ConstraintLayout>